k8s/infra/ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    external-dns.alpha.kubernetes.io/hostname: gke-ingress.marekbartik.com
    # Add to generate certificates for this ingress
    kubernetes.io/tls-acme: 'true'
  name: nginx
  namespace: development
spec:
  rules:
    - host: kuard-dev.marekbartik.com
      http:
        paths:
          - backend:
              serviceName: kuard
              servicePort: 80
            path: /
  tls:
    - hosts:
        - "kuard-dev.marekbartik.com"
      secretName: example-tls
